fix: greeb background on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: rgb(47, 134, 89);
   --foreground: #171717;
 }
 
@@ -20,7 +20,7 @@
 }
 
 body {
-  background: var(--background);
+  background: white;
   color: var(--foreground);
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   overflow-x: hidden;
@@ -28,7 +28,10 @@ body {
 
 @media (max-width: 767px) {
   body {
-    overflow: hidden;
+    background: rgb(47, 134, 89);
+  }
+  .circles {
+    overflow: auto;
   }
 }
 
@@ -76,7 +79,7 @@ body {
 .area {
   background: #ffffff;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   position: absolute;
   z-index: -1;
   top: 0;
@@ -100,7 +103,7 @@ body {
   height: 20px;
   background: rgba(47, 134, 89, 0.3);
   animation: animate 20s linear infinite;
-  bottom: -175px;
+  bottom: -200px;
 }
 
 .circles li:nth-child(1) {
