--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -194,7 +194,6 @@
   color: rgb(40, 144, 241);
   transition: color 0.3s 0.1s ease-out;
   text-align: center;
-  margin-bottom: 0;
 }
 
 .twitterButton span {
